--- a/builders/reasons.json
+++ b/builders/reasons.json
@@ -1,6 +1,6 @@
 {
   "Brief Description": "Not about programming or software development",
-  "Usage guidance": "This question does not appear to be about [a specific programming problem, software algorithm, or tools commonly used by programmers](/help/on-topic). It may be on-topic on [another site on the Stack Exchange Network](https://stackexchange.com/sites), but cannot be answered on $SiteName.",
+  "Usage guidance": "This question does not appear to be about [a specific programming problem, software algorithm, or tools commonly used by programmers](/help/on-topic). It may be on-topic on [another site on the Stack Exchange Network](https://stackexchange.com/sites) but cannot be answered on $SiteName.",
   "Post notice close description": "**Closed.** This question is [not about programming or software development](/help/closed-questions). It is not currently accepting answers.",
   "Post owner guidance": "This question does not appear to be about a specific programming problem, software algorithm, or tools commonly used by programmers. You can edit the question so it’s [on-topic](/help/on-topic) or see if it can be answered on [another site on the Stack Exchange Network](https://stackexchange.com/sites).",
   "Privileged user guidance": "This question does not appear to be about a specific programming problem, software algorithm, or tools commonly used by programmers. If you believe the question is on-topic on [another site on the Stack Exchange Network](https://stackexchange.com/sites) you can leave a comment to explain where the question may be able to be answered."
